# nn-training-kit

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  configproj.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
app/: Dockerfile  docker-compose.yml
examples/: .dockerignore  Dockerfile  config.yaml  docker-compose.yml  train_regression.py
examples/temp_data/: generate_data.py  sample_data.csv
nn_training_kit/: __init__.py  __version__.py
nn_training_kit/core/: config_loader.py  data_module.py  hyperparameter.py  hyperparameter_tuning.py  logging.py  loss.py  models.py  optimizer.py  trainer.py  training.py  training_config.py
tests/: README.md  __init__.py  config.yaml  test_data_loader.py  test_training.py
tests/configs/: advanced_config.yaml  basic_config.yaml
tests/data/: data_loader.py  generate_sample_data.py
tests/data/test/: linear_X.csv  linear_X.pt  linear_y.csv  linear_y.pt  nonlinear_X.csv  nonlinear_X.pt  nonlinear_y.csv  nonlinear_y.pt
tests/data/train/: linear_X.csv  linear_X.pt  linear_y.csv  linear_y.pt  nonlinear_X.csv  nonlinear_X.pt  nonlinear_y.csv  nonlinear_y.pt
tests/data/val/: linear_X.csv  linear_X.pt  linear_y.csv  linear_y.pt  nonlinear_X.csv  nonlinear_X.pt  nonlinear_y.csv  nonlinear_y.pt
