[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nn_training_kit"
description = "A toolkit for training neural networks with PyTorch Lightning"
authors = [
  { name="Javaid Baksh", email="javaidbaksh@gmail.com" },
]
version = "1.0.2"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_config = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nn_training_kit --cov-report=term-missing"

[tool.setuptools]
packages = ["nn_training_kit", "nn_training_kit.core"] 